2017-03-20 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Tagging: TtHFitter-00-03-07
    
2017-03-13 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing decorrelation by sample and ghost samples. Closes TTHFITTER-107
    * Fixing large stat err for zero content. Closes TTHFITTER-105
    * Fixing StatOnly flag (closes TTHFITTER-102):
       * if StatOnly set to TRUE, no gammas anywhere
       * need to be done before workspace creation in order to work with the limit / significance (l, s)
       * can be done from command line
       * does not need to re-create ws in case of fit (f)

2017-03-09 Michele Pinamonti <michele.pinamonti@gmail.com>
    * IMPORTANT: Binned likelihood option added, which might fix fit instabilities (thanks Daiki)
    * Adding small options: no ratio plot (thanks Robert Wolff) and others
    
2017-02-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * various merge requests + few small cosmetics
    
2017-01-31 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing y axis range issues + few small cosmetics
    
2017-01-19 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Post-fit summary plot bug fixed
    * Pruning.root warning removed TTHFITTER-100
    
2017-01-18 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Setup script back to a working version TTFITTER-98
    * Fixed missing MC stat error in summary plot TTFITTER-99
    * options Sample->DivideBy and MultiplyBy now operational
    
2016-12-14 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Added configurable y axis tange per region
    
2016-10-27 Loic Valery <lvalery@cern.ch>
    * Slight change in the setup for the automatic build in Git
    * Adding lots of Git stuff in the package (README.rst, .gitignore, ...)

2016-11-07 Thomas Calvet <calvet@cppm.in2p3.fr>
    * Fix automatic binning for histo inputs with Julian's correction
    
2016-11-07 Thomas Calvet <calvet@cppm.in2p3.fr>