@@ -11,7 +11,7 @@ Job: "ttH2015"
   LumiLabel: "85 pb^{-1}"
   MCweight: "FinalWeight*weight_leptonSF*weight_bTagSF"
   Lumi: 84.9676
-%   LumiScale: 10    % use this to scale `on the fly' (i.e. after option "n" or "h") MC samples - e.g. for fast projections
+  LumiScale: 10    % use this to scale `on the fly' (i.e. after option "n" or "h") MC samples - e.g. for fast projections
   Selection: "trigger>0 && (e_jets || mu_jets)"
 %   PlotOptions: "YIELDS"
   PlotOptions: "NOSIG,OVERSIG"
@@ -19,10 +19,11 @@ Job: "ttH2015"
   DebugLevel: 0
   MCstatThreshold: 0.01
 %   MCstatThreshold: NONE
-  SystControlPlots: TRUE
+  SystControlPlots: FALSE
+  SystDataPlots: TRUE
   SystPruningShape: 0.01
   SystPruningNorm: 0.01
-  SystLarge: 0.10
+  SystLarge: 0.90
 %   CorrelationThreshold: 0.20
   HistoChecks: NOCRASH
   SplitHistoFiles: TRUE   % set this in order to have separated .root files in Histograms/ for different regions
@@ -184,6 +185,12 @@ NormFactor: "muLumi"
   Max: 100
   Samples: all
   Constant: TRUE
+  
+NormFactor: "ttNorm"
+  Nominal: 1
+  Min: 0
+  Max: 10
+  Samples: ttbar
     
 % --------------- %
 % - SYSTEMATICS - %
@@ -352,11 +359,12 @@ Systematic: "tt_Rad_HiLow"
 %   Decorrelate: REGION
   Category: Theory
 
-Systematic: "tt_Shower"
-  Title: "t#bar{t} Parton Shower"
-  Type: HISTO
-  Samples: ttbar
-  NtupleFileSufUp: "_pyt8"
-  Smoothing: 40
-  Symmetrisation: ONESIDED
+% Systematic: "tt_Shower"
+%   Title: "t#bar{t} Parton Shower"
+%   Type: HISTO
+%   Samples: ttbar
+%   NtupleFileSufUp: "_pyt8"
+%   Smoothing: 40
+%   Symmetrisation: ONESIDED
+%   Category: Theory
   
